# newsletter-archive

./: .env  Cargo.toml  Dockerfile  README  README.md  fly.toml  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
config/: base.yaml  local.yaml  production.yaml
migrations/: 20220906172258_create_subscriptions_table.sql  20221025145323_create_subscriptions_table.sql  20221031042902_add_status_to_subscriptions.sql  20221031043627_make_status_not_null_in_subscriptions.sql  20221031044346_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  graceful_shutdown.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
