[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
config = "0.13.2"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1.2.1", features = ["v4"] }
log = "0.4.14"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"

[dependencies.sqlx]
version = "0.6.2"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.12"
